[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/InputControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/2D/player.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Kenney Mini Square Mono.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/2D/heart.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InputControl" parent="." instance=ExtResource( 1 )]

[node name="Collector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collector"]
polygon = PoolVector2Array( -14.75, 0, -13, -9.25, -3.25, -17.75, 4, -17.75, 13.25, -9, 15, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Score" type="Label" parent="CanvasLayer/GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.0
margin_right = 28.0
margin_bottom = 40.0
text = "0"
align = 1

[node name="Lives" type="Label" parent="CanvasLayer/GUI"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 40.0
text = "3
"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GUI"]
margin_left = 3.0
margin_top = 3.0
margin_right = 43.0
margin_bottom = 43.0

[node name="Heart" type="Sprite" parent="CanvasLayer/GUI/CenterContainer"]
position = Vector2( 19, 20 )
texture = ExtResource( 5 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -15, 0, -13, -2, -13, -7, -4, -7, -4, -12, -1, -12, -2, -17, 2, -17, 1, -12, 4, -12, 4, -7, 13, -7, 13, -2, 15, 0 )

[connection signal="body_entered" from="Collector" to="." method="_on_Collector_body_entered"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
